# quadrant-planner-server

./: .gitignore  .vercelignore  API_CHANGES.md  API_DESIGN.md  Makefile  README.md  index.py  planning.md  pyproject.toml  pytest.ini  requirements.md  requirements.txt  test_cors.py  test_jwt_auth.py  test_no_userid.py  vercel.json  vercel_app.py
api/: __init__.py  dependencies.py  main.py
api/analytics/: models.py  routes.py  service.py
api/auth/: jwt_handler.py
api/goals/: __init__.py  models.py  routes.py  service.py
api/shared/: exceptions.py  responses.py  validation.py
api/tasks/: models.py  routes.py  service.py
database/: connection.py  models.py
database/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_analytics_views.sql  004_subtasks_table.sql  005_subtasks_rls.sql
scripts/: init_database.py  run_subtasks_migration.py
tests/: conftest.py  test_main.py
tests/api/goals/: __init__.py  test_goals_endpoints.py
tests/api/tasks/: __init__.py  test_tasks_endpoints.py
tests/unit/: test_validation.py
